further updates to review lambda classes